UPDATE: Firefox layout bug, font

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display&family=Press+Start+2P&display=swap"); */
-@import url("https://fonts.googleapis.com/css2?family=Gugi&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oxanium:wght@200..800&family=Playfair+Display&family=Press+Start+2P&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Jersey+25&family=Pixelify+Sans:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 
 *,
 *::after,
@@ -62,9 +62,6 @@
     overflow: hidden;
     display: flex;
     justify-content: center;
-
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
     color: #eee;
   }
@@ -388,12 +385,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center; */
+  display: grid;
   place-items: center;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   
 }
 
 .heading{
-  font-size: 40px;
+  font-family: "Jersey 25", sans-serif;
+  /* font-family: "Pixelify Sans", sans-serif; */
+  font-size: 47px;
   margin-bottom: 20px;
 }
 
